Cherry-pick 305700@main (6fab811984ab). https://bugs.webkit.org/show_bug.cgi?id=305401

[GTK3] leaks DMA-BUF allocations when loading and unloading web pages
    https://bugs.webkit.org/show_bug.cgi?id=305401

    Reviewed by Nikolas Zimmermann.

    We keep the DMA-BUF buffers mapped in the UI process because we are
    failing to delete the associated texture. We need to make sure the gl
    context is current before calling glDeleteTextures().

    * Source/WebKit/UIProcess/gtk/AcceleratedBackingStore.cpp:
    (WebKit::AcceleratedBackingStore::~AcceleratedBackingStore):
    (WebKit::AcceleratedBackingStore::BufferEGLImage::~BufferEGLImage):
    (WebKit::AcceleratedBackingStore::BufferEGLImage::didUpdateContents):
    (WebKit::AcceleratedBackingStore::unrealize):
    * Source/WebKit/UIProcess/gtk/AcceleratedBackingStore.h:

    Canonical link: https://commits.webkit.org/305700@main

Canonical link: https://commits.webkit.org/298234.391@webkitglib/2.50